# wav2vec-distillation

./: README.md  pyproject.toml
src/: Wav2Vec2_pytorch_Kd_5.ipynb  Wav2Vec2_pytorch_Kd_5.py
